--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             <div class="Logo"><h1>GOLI</h1></div>
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
-        <li><a href="signup.html">Shop</a></li>
-        <li><a href="signup.html">Signup</a></li>
+        <li><a href="/HTML/signup.html">Shop</a></li>
+        <li><a href="/HTML/signup.html">Signup</a></li>
         <br>
     </ul>
         </header>
@@ -24,7 +24,7 @@
                 <h2>Goli Shopping!</h2>
                 <p>Do you need some items for your bathroom? Having some trouble commuting due to traffic? This is all you need! Goli Shopping provides hassle-free shopping with the use of your device. Your one-stop shop at the click of an act. </p>
                 <br>
-                <a href="signup.html">Learn More</a>
+                <a href="/HTML/signup.html">Learn More</a>
             </div>
         </div>
         <br>
